[package]
name = "du-atproto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# AT Protocol: DID/handle identity, did:key Ed25519 signature verification, and
# DID-document/PDS resolution. Foundation for the OAuth client + notify/fetch.
[dependencies]
du-domain = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ed25519-dalek = { workspace = true }
multibase = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
p256 = { workspace = true }
rand_core = { workspace = true }
