[package]
name = "du-bio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# Genomics coordinate math + text-format parsing for AppView aggregation:
# VCF variant ingest, BED callable-loci, UCSC-chain liftover. Raw-read formats
# (BAM/CRAM) and variant calling are OUT OF SCOPE (done in Navigator/edge).
[dependencies]
du-domain = { workspace = true }
thiserror = { workspace = true }
