[package]
name = "du-domain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# Pure domain layer: types + algorithms, NO IO. Keep dependencies minimal.
[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
thiserror = { workspace = true }
